cmake_minimum_required(VERSION 3.19)
project(DataStruct_01 C)

set(CMAKE_C_STANDARD 99)

add_executable(DataStruct_01 main.c)
add_executable(DataStruct_01_Practice_01 Practice_01.c N-Time.md)
add_executable(DataStruct_01_Practice_02 Practice_02.c)
add_executable(DataStruct_01_Practice_03 Practice_03.c)