cmake_minimum_required(VERSION 3.19)
project(DataStruct_02 C)

set(CMAKE_C_STANDARD 99)

add_executable(DataStruct_02 main.c)
add_executable(DataStruct_02_Book_01 Book_01.c)
add_executable(DataStruct_02_Book_02 Book_02.c)
add_executable(DataStruct_02_Book_03 Book_03.c)
add_executable(DataStruct_02_Practice_07 Practice_07.c)
add_executable(DataStruct_02_Practice_test test.c)